# lmkc

./: CMakeLists.txt  Counter.h  aio_read.cpp  aio_read.h  counter_less_than_12.cpp  counter_less_than_12.h  counter_more_than_12.cpp  counter_more_than_12.h  definition.h  function_def.h  large_mer.cpp  large_mer.h  main.cpp  thread_pool.h
include/libcuckoo/: cuckoohash_map.hh
test_files/: test2.in  test_data.fasta  test_data.fastq  test_data5.fa  test_data6.fa
